[project]
name = "digital-carbon-footprint-lab"
version = "0.1.0"
description = "Digital carbon footprint lab using fictional device and streaming usage data."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
